change if statments to tianry structure

--- a/CostMangerLocal/views/users/newUser.ejs
+++ b/CostMangerLocal/views/users/newUser.ejs
@@ -34,12 +34,12 @@
         <div class="col-md-4">
             <label for="userEmail" class="form-label">Email - Username</label>
             <input type="email" class="form-control" id="userEmail" placeholder="name@gmail.com" 
-            name="userName"  >
+            name="userName" required  >
         </div>
         <div class="col-md-4">
             <label for="userPassword" class="form-label">Password</label>
             <input type="password" class="form-control" id="userPassword" placeholder="password" 
-            name="password"  >
+            name="password" required  >
         </div>
 
          <div class="col-md-4">
