--- a/CostMangerLocal/views/costs/editCost.ejs
+++ b/CostMangerLocal/views/costs/editCost.ejs
@@ -26,6 +26,6 @@
     </div>
 
     <div class="col-12">
-        <button type="submit" class="btn btn-primary">Add</button>
+        <button type="submit" class="btn btn-primary">Update</button>
     </div>
 </form>
