a lot of changes :(

--- a/CostMangerLocal/views/Report/newReport.ejs
+++ b/CostMangerLocal/views/Report/newReport.ejs
@@ -2,7 +2,13 @@
   <title>Get Report</title>
   <div class="container">
     <title>Report</title>
-
+    <div class="me-auto p-2">
+      <a id="addBtn" type="button" class="btn btn-outline-dark btn data-bs-toggle=" tooltip" title="Back"
+          href="/home">
+          <span class="bi bi-arrow-left"></span>
+      </a>
+  </div>
+  
     <div class="display-6" style="text-align:  center;">
       <%= reportTitle %>
     </div>
