--- a/CostMangerLocal/views/components/preNavbar.ejs
+++ b/CostMangerLocal/views/components/preNavbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark " style="background-color:#0a2d79;">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color:#184f7f;">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Cost Manager</a>
         <div class="d-flex justify-content-center " style="color: aliceblue;">
