--- a/CostMangerLocal/views/components/footer.ejs
+++ b/CostMangerLocal/views/components/footer.ejs
@@ -1,8 +1,15 @@
-<footer class="footer   bg-dark py-3 mt-auto">
-    <div class="container">
-        <div style="text-align: center;">
-            <span class="text-muted"> &copy; Cost Manager 2022 </span>
+<footer class="footer  py-3 mt-auto" style="background-color:#184f7f;">
+    <div class="d-flex justify-content-between ms-1 me-5">
+        <div class="text-muted">
+           
         </div>
+        <span class="text-muted" style="color: rgba(255, 253, 253, 0.717);">
+             &copy; 
+             <a class="text-muted"href="">Daniel Gil</a> &#38; 
+             <a class="text-muted"href="">Natan Gershbein</a> &copy;
+             2022 &copy;
+        </span>
+        <span><a class="text-muted" href="/credits">credits</a></span>
 
     </div>
 </footer>
