--- a/CostMangerLocal/views/costs/allCosts.ejs
+++ b/CostMangerLocal/views/costs/allCosts.ejs
@@ -1,6 +1,10 @@
 <% layout('layouts/skelton.ejs') %>
     <title>Costs</title>
-    <h2 class="text-center">All Costs</h2>
+    <div class="shadow-sm p-3 mb-5 bg-body rounded text-black-50">
+        <h2 class="text-center">All Costs</h2>
+
+    </div>
+
 
     <div class="d-flex mb-3">
         <div class="me-auto p-2">
@@ -78,7 +82,7 @@
         <div class="row row-cols-3  g-4 text-center" id="costContent" style="visibility:hidden ;">
             <% for(let cost of costs) { %>
                 <div class="col" style="margin-bottom: 10px;">
-                    <div class="card w-50">
+                    <div class="card w-50 shadow p-3 mb-5 bg-body rounded">
                         <div class="card-header">
                             <!-- <h5><%= cost.description.toUpperCase() %></h5> -->
                             <%= cost.description.toUpperCase() %>
@@ -133,9 +137,9 @@
             setInterval(() => {
                 document.getElementById('spinner').style.visibility = "hidden"
                 show();
-            }, 2000);
+            }, 500);
             function show() {
-                setInterval(() => document.getElementById('costContent').style.visibility = "visible", 1000);
+                setInterval(() => document.getElementById('costContent').style.visibility = "visible", 500);
             }
         </script>
 
