--- a/CostMangerLocal/views/costs/showCost.ejs
+++ b/CostMangerLocal/views/costs/showCost.ejs
@@ -8,7 +8,7 @@
 
     <div class="container">
         <div class="position-absolute top-50 start-50 translate-middle">
-            <div class="card text-bg-light mb-3 text-center" style="width: 18rem; margin-top: 10px;" ">
+            <div class="card text-bg-light mb-3 text-center shadow p-3 mb-5 bg-body rounded" style="width: 18rem; margin-top: 10px;" ">
         <div class=" card-header">
                 <h5>
                     <%= cost.description.toUpperCase() %>
