--- a/CostMangerLocal/views/Report/newReport.ejs
+++ b/CostMangerLocal/views/Report/newReport.ejs
@@ -3,9 +3,9 @@
   <div class="container">
     <title>Report</title>
     <div class="me-auto p-2">
-      <a id="addBtn" type="button" class="btn btn-outline-dark btn data-bs-toggle=" tooltip" title="Back"
-          href="/home">
-          <span class="bi bi-arrow-left"></span>
+      <a id="addBtn" type="button" class="btn btn-outline-primary btn data-bs-toggle=" tooltip" title="Back"
+          href="/users/<%= userId %> ">
+          <span class="bi bi-house"></span>
       </a>
   </div>
   
