--- a/CostMangerLocal/views/components/footer.ejs
+++ b/CostMangerLocal/views/components/footer.ejs
@@ -5,8 +5,8 @@
         </div>
         <span class="text-muted" style="color: rgba(255, 253, 253, 0.717);">
              &copy; 
-             <a class="text-muted"href="">Natan Gershbein</a> &copy;
-             <a class="text-muted"href="">Daniel Gil</a> &#38; 
+             <a class="text-muted"href="">Natan Gershbein</a> &#38;
+             <a class="text-muted"href="">Daniel Gil</a>  
              2022 &copy;
         </span>
         <span><a class="text-muted" href="/credits">credits</a></span>
