--- a/CostMangerLocal/views/components/navbar.ejs
+++ b/CostMangerLocal/views/components/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark  shadow p-2 mb-1  " style="background-color:#184f7f;">
   <div class="container-fluid">
-    <a class="navbar-brand">Cost Manager</a>
+    <a class="navbar-brand"><i>Cost Manager</i></a>
 
 
 
@@ -11,10 +11,10 @@
     <div class="collapse navbar-collapse " id="navbarNav">
 
       <ul class="navbar-nav ml-auto">
-
+<!-- 
         <li class="nav-item">
-          <a class="nav-link" href="/home"><i class="bi bi-house"></i></a>
-        </li>
+          <a class="nav-link" ><i class="bi bi-house"></i></a>
+        </li> -->
 
         <!-- Start of Categories section in nav-bar -->
         <li class="nav-item dropdown">
