--- a/CostMangerLocal/views/costs/allCosts.ejs
+++ b/CostMangerLocal/views/costs/allCosts.ejs
@@ -1,21 +1,20 @@
 <% layout('layouts/skelton.ejs') %>
     <title>Costs</title>
+
     <div class="shadow-sm p-3 mb-5 bg-body rounded text-black-50">
         <h2 class="text-center">All Costs</h2>
 
     </div>
-
-
     <div class="d-flex mb-3">
         <div class="me-auto p-2">
-            <a id="addBtn" type="button" class="btn btn-outline-dark btn data-bs-toggle=" tooltip" title="Back"
-                href="/users/<%= id%> ">
+            <a id="addBtn" type="button" class="btn btn-outline-dark btn" data-bs-toggle="tooltip" title="Back"
+                href="/users/<%= id %> ">
                 <span class="bi bi-arrow-left"></span>
             </a>
         </div>
         <div class="p-2">
-            <a id="addBtn" type="button" class="btn btn-outline-primary btn data-bs-toggle=" tooltip"
-                title="Add Cost"" href=" /users/<%=id%>/costs/new">
+            <a id="addBtn" type="button" class="btn btn-outline-primary btn" data-bs-toggle=" tooltip" title="Add Cost"
+                href=" /users/<%= id %>/costs/new">
                 <span class="bi bi-file-earmark-plus"></span>
             </a>
         </div>
@@ -28,120 +27,75 @@
 
         </div>
 
+
+
     </div>
-    <!-- 
-
-    <table class="table table-striped table-hover">
-
-        <thead class="table-light"">
-            <tr>
-                <th scope=" col">Description</th>
-            <th scope="col">Sum</th>
-            <th scope="col">Date <span style="font-size: x-small;">(yyyy-mm-dd)</span></th>
-            <th scope="col">Category</th>
-            <% if (costs.length> 0) { %>
-                <th scope="col">Delete</th>
-                <th scope="col">Show Cost</th>
-                <% } %>
-
-                    </tr>
-        </thead>
-        <tbody>
-            <% for(let cost of costs) { %>
-                <tr>
-                    <td>
-                        <%= cost.description %></a>
-                    </td>
-                    <td>
-                        <%= cost.sum%></a>
-                    </td>
-                    <td>
-                        <%= cost.date%></a>
-                    </td>
-                    <td>
-                        <%= cost.category%></a>
-                    </td>
-                    <td>
-                        <form action="/users/<%= id %>/costs/<%= cost._id%>" method="post">
-                            <button id="buttonDelete" class="btn btn-outline-danger btn-sm bi bi-trash">
-                            </button>
-                        </form>
-                    </td>
-                    <td>
-                        <a type="button" href="/costs/<%= cost._id%>"
-                            class="btn btn-outline-info btn-sm bi bi-hand-index">
-                        </a>
-                    </td>
-                </tr>
-                <% } %>
-        </tbody>
-    </table> -->
     <div class="text-center" id="spinner">
         <div class="spinner-border" role="status" aria-hidden="true">
         </div>
         <div class="row row-cols-3  g-4 text-center" id="costContent" style="visibility:hidden ;">
-            <% for(let cost of costs) { %>
-                <div class="col" style="margin-bottom: 10px;">
-                    <div class="card w-50 shadow p-3 mb-5 bg-body rounded">
-                        <div class="card-header">
-                            <!-- <h5><%= cost.description.toUpperCase() %></h5> -->
-                            <%= cost.description.toUpperCase() %>
-
-                        </div>
-                        <div class="card-body">
-                            <img src="/images/money.gif" class="card-img-top">
-                            <div class="card-body">
-                                <div class="float-start">
-                                    <h5 class="card-text">
-                                        <span>
-                                            <%= cost.sum%><small>&#8362;</small>
-                                        </span>
-                                    </h5>
-                                </div>
-                                <div class="float-end">
-                                    <small>
-                                        <%= cost.category %>
-                                    </small>
-                                </div>
-                            </div>
-
-
-                        </div>
-                        <div class="card-footer">
-                            <div class="d-flex justify-content-between">
-                                <a type="button" href="/costs/<%=id %>/<%= cost._id%>"
-                                    class="btn btn-outline-info btn-sm bi bi-hand-index">
-                                </a>
-                                <!-- <a type="button" href="/costs/<%= cost._id%>"
-                           class="btn btn-outline-info btn-sm bi bi-hand-index">
-                        </a> -->
-                                <small class="text-muted">
-                                    <%= new Date(cost.date).toLocaleDateString() %>
-                                </small>
-                                <form action="/users/<%= id %>/costs/<%= cost._id%>?_method=delete" method="post">
-                                    <button id="buttonDelete" class="btn btn-outline-danger btn-sm bi bi-trash">
-                                    </button>
-                                </form>
-                            </div>
-
-                            <!-- <small class="text-muted"> <%= new Date(cost.date).toLocaleDateString() %> 
-                    </small> -->
-                        </div>
-                    </div>
-
-                </div>
+            <% if (costs.length===0) { %>
+                <h3 class="text-center">Empty</h3>
                 <% } %>
+                    <% for(let cost of costs) { %>
+                        <div class="col" style="margin-bottom: 10px;">
+                            <div class="card w-50 shadow p-3 mb-5 bg-body rounded">
+                                <div class="card-header">
+                                    <!-- <h5><%= cost.description.toUpperCase() %></h5> -->
+                                    <%= cost.description.toUpperCase() %>
+
+                                </div>
+                                <div class="card-body">
+                                    <img src="/images/money.gif" class="card-img-top">
+                                    <div class="card-body">
+                                        <div class="float-start">
+                                            <h5 class="card-text">
+                                                <span>
+                                                    <%= cost.sum %><small>&#8362;</small>
+                                                </span>
+                                            </h5>
+                                        </div>
+                                        <div class="float-end">
+                                            <small>
+                                                <%= cost.category %>
+                                            </small>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                                <div class="card-footer">
+                                    <div class="d-flex justify-content-between">
+                                        <a type="button" href="/costs/<%= id %>/<%= cost._id %>"
+                                            class="btn btn-outline-info btn-sm bi bi-hand-index">
+                                        </a>
+                                        <!-- <a type="button" href="/costs/<%= cost._id %>"
+                               class="btn btn-outline-info btn-sm bi bi-hand-index">
+                            </a> -->
+                                        <small class="text-muted">
+                                            <%= new Date(cost.date).toLocaleDateString() %>
+                                        </small>
+                                        <form action="/costs/<%= id %>/<%= cost._id %>?_method=delete" method="post">
+                                            <button id="buttonDelete" class="btn btn-outline-danger btn-sm bi bi-trash">
+                                            </button>
+                                        </form>
+                                    </div>
+
+
+                                </div>
+                            </div>
+
+                        </div>
+                        <% } %>
         </div>
+    </div>
+    <script>
+        setInterval(() => {
+            document.getElementById('spinner').style.visibility = "hidden"
+            show();
+        }, 500);
 
-        <script>
-            setInterval(() => {
-                document.getElementById('spinner').style.visibility = "hidden"
-                show();
-            }, 500);
-            function show() {
-                setInterval(() => document.getElementById('costContent').style.visibility = "visible", 500);
-            }
-        </script>
-
-
-        <!-- <script src="/javascripts/newUserClient.js"></script> -->
+        function show() {
+            setInterval(() => document.getElementById('costContent').style.visibility = "visible", 500);
+        }
+    </script>
