--- a/CostMangerLocal/views/home.ejs
+++ b/CostMangerLocal/views/home.ejs
@@ -65,7 +65,7 @@
         data-bs-parent="#accordionExample">
         <div class="accordion-body">
           <p btn class="lead">
-            <a class="btn btn-primary btn-sm" href="/users/<%= user._id%>/costs/" role="button">My Costs</a>
+            <a class="btn btn-primary btn-sm" href="/costs/<%= user._id %>" role="button">My Costs</a>
             <a class="btn btn-primary btn-sm" href="/users/<%= user._id%>/costs/new" role="button">Add Costs</a>
             <a class="btn btn-primary btn-sm" href="/report/<%= user._id%>/getReport" role="button">Get Report</a>
             <a class="btn btn-primary btn-sm" href="/report/<%= user._id%>/allReports" role="button">All Reports</a>
