--- a/CostMangerLocal/views/costs/newCost.ejs
+++ b/CostMangerLocal/views/costs/newCost.ejs
@@ -1,6 +1,11 @@
 <% layout('layouts/skelton.ejs') %>
     <title>New Cost</title>
-    <form class="row g-4" action="/users/<%= id %>/costs" method="post">
+    <div class="me-auto p-2">
+        <a id="addBtn" type="button" class="btn btn-outline-primary mb-5" data-bs-toggle="tooltip" title="Back"
+            href="/users/<%= id %> ">
+            <span class="bi bi-arrow-left"></span>
+        </a>
+    <form class="row g-4" action="/costs/<%=id %>" method="post">
         <div class="col-md-4">
             <label for="sum" class="form-label">Sum</label>
             <input type="number" step="0.1" class="form-control" id="sum" name="sum" value="0">
