--- a/CostMangerLocal/views/costs/allCosts.ejs
+++ b/CostMangerLocal/views/costs/allCosts.ejs
@@ -23,6 +23,7 @@
                 data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"></button>
 
             <div class="offcanvas offcanvas-end"data-bs-scroll="true" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel"
+            <div class="offcanvas offcanvas-end"data-bs-scroll="true" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel"
                 style="background-color:#e8edf1;">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title text-center" id="offcanvasTopLabel">
