--- a/CostMangerLocal/views/index.ejs
+++ b/CostMangerLocal/views/index.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/preLoginOut.ejs') %>
 <title>Enter Screen</title>
 <div class="jumbotron position-absolute top-50 start-50 translate-middle"">
-    <h1 class="display-4">Hi And Welcome &#128075; &#128075;</h1>
-    <p class="lead">Are you new or old user?</p>
+    <h1 class="display-4">Hi and welcome &#128075; &#128075;</h1>
+    <p class="lead">Are you new  user?</p>
     <hr class="my-4">
    
     <div class="lead d-flex justify-content-center ">
@@ -10,7 +10,6 @@
         <a type="button" class="btn btn-outline-primary btn-m-10" href="/signUp">
             I'm new user <i class="bi bi-person-plus"></i></a>
         <a type="button" class="btn btn-outline-success" href="/login">Take me in</a>
-        <!-- <a type="button" class="btn btn-outline-success" href="/login">Old User</a> -->
     </div>
 
         </div>
