Last & final version

--- a/CostMangerLocal/views/components/navbar.ejs
+++ b/CostMangerLocal/views/components/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark  shadow p-2 mb-1  " style="background-color:#184f7f;">
   <div class="container-fluid">
-    <a class="navbar-brand"><i>Costs Manager</i></a>
+    <a class="navbar-brand"><i>Cost Manager</i></a>
 
 
 
